force-app/main/default/objects/EmailMessageHtml__c/EmailMessageHtml__c.object-meta.xml
<CustomObject>
    <label>EmailMessageHtml</label>
    <nameField>
        <label>EmailMessage Html</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EmailMessageHtmls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>