force-app/main/default/objects/EmailMessageHtml__c/fields/Csv_Body__c.field-meta.xml
<CustomField>
    <fullName>Csv_Body__c</fullName>
    <label>Csv Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>