force-app/main/default/objects/EmailMessageHtml__c/fields/Csv_String_2__c.field-meta.xml
<CustomField>
    <fullName>Csv_String_2__c</fullName>
    <label>Csv String 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>