force-app/main/default/objects/EmailMessageHtml__c/fields/File_Body__c.field-meta.xml
<CustomField>
    <fullName>File_Body__c</fullName>
    <label>File Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>