force-app/main/default/objects/EmailMessageHtml__c/fields/Is_Large_File__c.field-meta.xml
<CustomField>
    <fullName>Is_Large_File__c</fullName>
    <label>Is Large File</label>
    <length>10</length>
    <type>Text</type>
</CustomField>