force-app/main/default/objects/EmailMessageHtml__c/fields/Parent_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case_Id__c</fullName>
    <description>Email message parent case id</description>
    <label>Parent Case Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>