force-app/main/default/objects/EmailMessageHtml__c/fields/Retry_Executed_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Executed_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retry Executed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>