force-app/main/default/objects/EmailMessageHtml__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Case_Id__c</columns>
    <columns>Status__c</columns>
    <columns>EmailMessage_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>