force-app/main/default/objects/EmailMessageHtml__c/listViews/Not_Started_List.listView-meta.xml
<ListView>
    <fullName>Not_Started_List</fullName>
    <columns>NAME</columns>
    <columns>EmailMessage_Id__c</columns>
    <columns>Status__c</columns>
    <columns>Parent_Case_Id__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Sujatha</value>
    </filters>
    <label>Not Started List</label>
</ListView>